// Copyright AGNTCY Contributors (https://github.com/agntcy)
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";
package controller.proto.v1;

import "controller/v1/controller.proto";

option go_package = "github.com/agntcy/slim/control-plane-go/slimctl/internal/proto/controlplane/v1;controlplanev1";

service ControlPlaneService {
    rpc OpenControlChannel(ControPlaneMessage) returns (ControPlaneMessage) {}
  }
  
message ControPlaneMessage {
    string message_id = 1;
  
    oneof payload {
      ControlPlaneConfigurationCommand config_command = 2;
      Ack ack = 3;
      ControlPlaneSubscriptionListRequest subscription_list_request = 4;
      SubscriptionListResponse subscription_list_response = 5;
      ControlPlaneConnectionListRequest connection_list_request = 6;
      ConnectionListResponse connection_list_response = 7;
      NodeListRequest node_list_request = 8;
      NodeListResponse node_list_response = 9;
    }
  }

message ControlPlaneConfigurationCommand {
    ConfigurationCommand configuration_command = 1;
    string nodeId = 2;
}

message ControlPlaneSubscriptionListRequest {
    string nodeId = 1;
}

message ControlPlaneConnectionListRequest {
    string nodeId = 1;
}

message NodeListRequest {}

message NodeEntry {
    uint64 id = 1;
    string host = 2;
    uint32 port = 3;
}

message NodeListResponse {
    repeated NodeEntry entries = 1;
}
  